--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "mysql": "^2.18.1",
+    "typeorm": "^0.2.34"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.31",
